// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DriftsmeldingKommune renders error alert with mldEttersendelseDeaktivert 1`] = `
<DocumentFragment>
  <div
    class="mb-4 navds-alert navds-alert--error navds-alert--medium"
  >
    <svg
      aria-labelledby="title-r1"
      class="navds-alert__icon"
      fill="none"
      focusable="false"
      height="1em"
      role="img"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="title-r1"
      >
        Feil
      </title>
      <path
        clip-rule="evenodd"
        d="M7.742 2.47a.75.75 0 0 1 .53-.22h7.456a.75.75 0 0 1 .53.22l5.272 5.272c.141.14.22.331.22.53v7.456a.75.75 0 0 1-.22.53l-5.272 5.272a.75.75 0 0 1-.53.22H8.272a.75.75 0 0 1-.53-.22L2.47 16.258a.75.75 0 0 1-.22-.53V8.272a.75.75 0 0 1 .22-.53zm1.288 5.5a.75.75 0 0 0-1.06 1.06L10.94 12l-2.97 2.97a.75.75 0 1 0 1.06 1.06L12 13.06l2.97 2.97a.75.75 0 1 0 1.06-1.06L13.06 12l2.97-2.97a.75.75 0 0 0-1.06-1.06L12 10.94z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="navds-alert__wrapper navds-alert__wrapper--maxwidth navds-body-long navds-body-long--medium"
    >
      <p
        class="navds-label"
      >
        <time
          class="dato"
        >
          9. november 1987
        </time>
        <time>
           klokken 12:00
        </time>
      </p>
      Vi kan dessverre ikke motta dokumentasjon fra deg. Du kan enten prøve igjen senere, eller levere de på Nav-kontoret ditt.
    </div>
  </div>
</DocumentFragment>
`;

exports[`DriftsmeldingKommune renders error alert with mldInnsynDeaktivert 1`] = `
<DocumentFragment>
  <div
    class="mb-4 navds-alert navds-alert--error navds-alert--medium"
  >
    <svg
      aria-labelledby="title-r2"
      class="navds-alert__icon"
      fill="none"
      focusable="false"
      height="1em"
      role="img"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="title-r2"
      >
        Feil
      </title>
      <path
        clip-rule="evenodd"
        d="M7.742 2.47a.75.75 0 0 1 .53-.22h7.456a.75.75 0 0 1 .53.22l5.272 5.272c.141.14.22.331.22.53v7.456a.75.75 0 0 1-.22.53l-5.272 5.272a.75.75 0 0 1-.53.22H8.272a.75.75 0 0 1-.53-.22L2.47 16.258a.75.75 0 0 1-.22-.53V8.272a.75.75 0 0 1 .22-.53zm1.288 5.5a.75.75 0 0 0-1.06 1.06L10.94 12l-2.97 2.97a.75.75 0 1 0 1.06 1.06L12 13.06l2.97 2.97a.75.75 0 1 0 1.06-1.06L13.06 12l2.97-2.97a.75.75 0 0 0-1.06-1.06L12 10.94z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="navds-alert__wrapper navds-alert__wrapper--maxwidth navds-body-long navds-body-long--medium"
    >
      <p
        class="navds-label"
      >
        <time
          class="dato"
        >
          9. november 1987
        </time>
        <time>
           klokken 12:00
        </time>
      </p>
      Vi kan dessverre ikke vise nyeste status for søknaden din. Du kan fortsatt sende inn dokumentasjon på nav.no. Har du spørsmål kan du ta kontakt med Nav-kontoret ditt.
    </div>
  </div>
</DocumentFragment>
`;

exports[`DriftsmeldingKommune renders error alert with mldInnsynOgEttersendelseDeaktivert 1`] = `
<DocumentFragment>
  <div
    class="mb-4 navds-alert navds-alert--error navds-alert--medium"
  >
    <svg
      aria-labelledby="title-r0"
      class="navds-alert__icon"
      fill="none"
      focusable="false"
      height="1em"
      role="img"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="title-r0"
      >
        Feil
      </title>
      <path
        clip-rule="evenodd"
        d="M7.742 2.47a.75.75 0 0 1 .53-.22h7.456a.75.75 0 0 1 .53.22l5.272 5.272c.141.14.22.331.22.53v7.456a.75.75 0 0 1-.22.53l-5.272 5.272a.75.75 0 0 1-.53.22H8.272a.75.75 0 0 1-.53-.22L2.47 16.258a.75.75 0 0 1-.22-.53V8.272a.75.75 0 0 1 .22-.53zm1.288 5.5a.75.75 0 0 0-1.06 1.06L10.94 12l-2.97 2.97a.75.75 0 1 0 1.06 1.06L12 13.06l2.97 2.97a.75.75 0 1 0 1.06-1.06L13.06 12l2.97-2.97a.75.75 0 0 0-1.06-1.06L12 10.94z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="navds-alert__wrapper navds-alert__wrapper--maxwidth navds-body-long navds-body-long--medium"
    >
      <p
        class="navds-label"
      >
        <time
          class="dato"
        >
          9. november 1987
        </time>
        <time>
           klokken 12:00
        </time>
      </p>
      Vi kan dessverre ikke vise deg nyeste status for søknaden din, eller motta dokumentasjon fra deg. Du kan enten prøve igjen senere, eller ta kontakt med Nav-kontoret ditt.
    </div>
  </div>
</DocumentFragment>
`;

exports[`DriftsmeldingKommune renders nothing if driftsmelding is undefined 1`] = `<DocumentFragment />`;
